# AsterOS

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  limine.conf  linker.ld  makever.sh  meson.build  readme.md  usershell.ld
include/aster/: panic.h  shell.h  string.h
include/aster/arch/x86_64/: gdt.h  idt.h  usermode.h
include/aster/arch/x86_64/boot/: limine.h
include/aster/debug/: logging.h
include/aster/drivers/: ata.h  framebuffer.h  keyboard.h  ports.h  serial.h  timer.h
include/aster/drivers/console/: console.h  font.h
include/aster/fs/: ext2.h  ramfs.h  vfs.h
include/aster/kernel/syscall/: syscall.h  test_syscall.h
include/aster/lib/: kprintf.h
include/aster/mm/: pmm.h  vmm.h
include/aster/scheduler/: scheduler.h  task.h
include/aster/shell/: user_shell.h
include/aster/user/: elf.h  process.h  shell.h  test_user.h
src/arch/x86_64/: usermode.asm
src/arch/x86_64/boot/: limine.c
src/arch/x86_64/gdt/: gdt.asm  gdt.c
src/arch/x86_64/idt/: idt.c
src/boot/: boot.asm  idt.asm
src/debug/: logging.c
src/drivers/: ata.c  serial.c  timer.c
src/drivers/console/: console.c  font.c
src/drivers/framebuffer/: framebuffer.c
src/drivers/keyboard/: keyboard.c
src/fs/: ramfs.c  vfs.c
src/fs/ext2/: ext2.c
src/kernel/: main.c  panic.c
src/kernel/scheduler/: scheduler.c
src/kernel/syscall/: syscall.c  test_syscall.c
src/lib/: kprintf.c  string.c
src/mm/: pmm.c  vmm.c
src/shell/: shell.c  user_shell.c
src/user/: elf.c  process.c  shell.c  shell_user.c  test_user.c
